[package]
name = "iot"
version = "0.1.0"
authors = ["Achim Gosse <achim.gosse@digitalnoise.de>"]

[dependencies]
rocket = "0.3.3"
rocket_codegen = "0.3.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rocket_cors = "0.2.1"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]